# flow-obfuscator

./: .gitignore  CMakeLists.txt  FlowObfuscator.cpp  FlowObfuscator.h  MA.odt  README.md  compiler.py  meas  meas-lcs.cpp  meas-lcstr.cpp  meas-time.py  meas.py  notes  print_detections.py  seminar.odp
example/: calc_pi.cpp  example.bc  example.cpp  example.exe.ll  example.ll  snippet.c  snippet2.c
meas-tables/: .~lock.size_increase.ods#  compile_time.ods  cuckoo.ods  instruction_increase.ods  lcs.ods  lcstr.ods  memory_increase.ods  size_increase.ods  size_static_dynamic.ods  time_increase.ods  virustotal.ods  yara.ods
pics/: cfg.odg  coreutils-tests.odg  decompiler.odg  design.odg  first impression.odg  listing 3-5.odg  resilience.odg  snippet.odg  stacktrace.odg  tension.odg
thread_test/: thread_test.bc  thread_test.cpp  thread_test.exe.ll  thread_test.ll
vt_results/: Exploit.Linux.Interbase-clang  Exploit.Linux.Interbase-clang32  Exploit.Linux.Interbase-gcc  Exploit.Linux.Interbase-gcc32  Exploit.Linux.Interbase-opt-main  Exploit.Linux.Interbase-opt32  Exploit.Linux.Nhttpd-clang  Exploit.Linux.Nhttpd-clang32  Exploit.Linux.Nhttpd-gcc  Exploit.Linux.Nhttpd-gcc32  Exploit.Linux.Nhttpd-opt  Exploit.Linux.Nhttpd-opt-main  Exploit.Linux.Nhttpd-opt-main32  Exploit.Linux.Nhttpd-opt32  KAAL_BHAIRAV-clang  KAAL_BHAIRAV-clang32  KAAL_BHAIRAV-gcc  KAAL_BHAIRAV-gcc32  KAAL_BHAIRAV-opt  KAAL_BHAIRAV-opt-main  KAAL_BHAIRAV-opt-main32  KAAL_BHAIRAV-opt32  Net-Worm.Linux.Slapper-clang  Net-Worm.Linux.Slapper-clang32  Net-Worm.Linux.Slapper-gcc  Net-Worm.Linux.Slapper-gcc32  (+92 more)
(+42 files in other folders)
